<resources>
    <string name="app_name">Rajkul</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="kuldeep_bairwa">Kuldeep Bairwa</string>
    <string name="hi">Hi, </string>
    <string name="you">You</string>
    <string name="_45_sec_ago">45 Sec Ago</string>
    <string name="more">more</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="_100">100 </string>
    <string name="likes"> Likes</string>
    <string name="get_traditional_rajputi_clothes_at_resonable_price">Get traditional rajputi clothes at resonable price!</string>
    <string name="android_developer">Android Developer</string>
    <string name="kuldeep">kuldeep</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="_112k">112k</string>
    <string name="follow">Follow</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="create">Create</string>
    <string name="chat">Chat</string>
    <string name="market_place">Market Place</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="conversation">Conversation</string>
    <string name="mentioned_you_in_a_post">" mentioned you in a post"</string>
    <string name="atr">\@</string>
    <string name="type_a_message">Type a message</string>
    <string name="choose">Choose</string>
    <string name="h_namaste">नमस्ते!</string>
    <string name="h_hindi">हिंदी</string>
    <string name="str_continue">Continue</string>
    <string name="choose_nyour_language">Choose\nyour language</string>
    <string name="our_nheritage">Our Heritage</string>
    <string name="khamma_ghani">खम्मा घणी सा!</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="join_rajkul">Join Rajkul</string>
    <string name="phone_number_username_or_email">Phone number, username or email</string>
    <string name="your_password">Your Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="no_result_found">No Result Found</string>
    <string name="phone_number_verification">Phone number\nverification</string>
    <string name="we_just_sent_a_verification_code_to">We just sent a verification code to</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="resent_otp">Resent OTP</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Please enter OTP</string>
    <string name="enter_valid_otp">Please enter a valid OTP</string>
    <string name="choose_your_username">Choose your username</string>
    <string name="username">username</string>
    <string name="taken">Taken</string>
    <string name="your_full_name">Your full name</string>
    <string name="next">Next</string>
    <string name="personal_details">Personal details</string>
    <string name="basic_information">Basic information</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="gender">Gender</string>
    <string name="prefix_option">Prefix (Option)</string>
    <string name="prefix">Prefix</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="kunwar">Kunwar</string>
    <string name="bhanwar">Bhanwar</string>
    <string name="tanwar">Tanwar</string>
    <string name="thakur_saheb">Thakur Saheb</string>
    <string name="banna">Banna</string>
    <string name="data_hukam">Data Hukam</string>
    <string name="bhabha">Bhabha</string>
    <string name="baisa">Baisa</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="swipe_left_to_n_explore_more">Swipe left to\n explore more</string>
    <string name="please_select_your_dynasty">Please select your Dynasty</string>
    <string name="add_profile_picture">Add Your Profile Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
</resources>