<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_12sdp"
    android:paddingBottom="@dimen/_12sdp"
    android:layout_marginTop="@dimen/_8sdp"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/atr"
        android:text="@string/atr"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_toEndOf="@+id/atr"
        android:text="@string/kuldeep"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/userName"
        android:text="@string/mentioned_you_in_a_post" />



</RelativeLayout>