<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.authentication.BasicInfoActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                style="@style/BackButtonStyle"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@null"
                android:onClickListener="@{listener}"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="@id/guidelineTop" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtChooseUserName"
                style="@style/LightSemiBoldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_23sdp"
                android:text="@string/basic_information"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/btnBack" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LightLightTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="Date of birth"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/edtDay"
                    style="@style/DefaultEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="28"
                    android:focusable="false"
                    android:onClickListener="@{listener}"
                    android:focusableInTouchMode="false"
                    android:hint="@string/day" />

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/edtMonth"
                    style="@style/DefaultEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="40"
                    android:onClickListener="@{listener}"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/month" />

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/edtYear"
                    style="@style/DefaultEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="33"
                    android:focusable="false"
                    android:onClickListener="@{listener}"
                    android:focusableInTouchMode="false"
                    android:hint="@string/year" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LightLightTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/gender"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/edtGender"
                style="@style/DefaultEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:focusable="false"
                android:onClickListener="@{listener}"
                android:focusableInTouchMode="false"
                android:hint="@string/day" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LightLightTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/prefix_option"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/edtPrefix"
                style="@style/DefaultEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:onClickListener="@{listener}"
                android:focusable="false"
                android:inputType="textNoSuggestions"
                android:focusableInTouchMode="false"
                android:hint="@string/prefix" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/DefaultActionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:onClickListener="@{listener}"
            android:paddingVertical="@dimen/_11sdp"
            android:text="@string/next"
            app:icon="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>